test_files/negative/generation/negative.stats
Version : 1.5
PDF error : Lexing error : unexpected character : 0x2d at offset 880 [0x370] in file !
